--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Your Name"
+title: "Keshar Shahi"
 description: "PhD Student in Economics)"
 theme: jekyll-theme-minimal  # built-in GitHub Pages theme
 
