--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Keshar Shahi"
-description: "PhD Student in Economics)"
+description: "PhD Student in Economics"
 theme: jekyll-theme-minimal  # built-in GitHub Pages theme
 
 # Optional contact / metadata
